--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -695,3 +695,67 @@ svg {
 		height: 100%;
 	}
 }
+
+.dt-table {
+	background-color: #f0f9fd;
+	padding: 12px 24px;
+	border-radius: 20px;
+	table {
+		width: 100%;
+		tr {
+			th {
+				font-weight: bold;
+				color: $c3;
+				padding: 20px 12px;
+			}
+			td {
+				padding: 12px;
+				a {
+					text-decoration: underline;
+					color: $c3;
+				}
+				.dot {
+					display: inline-block;
+					width: 10px;
+					height: 10px;
+					border-radius: 12px;
+					background: #ff0000	;
+					margin-right: 4px;
+					&.open {
+						background: #77c509;
+					}
+				}
+			}
+			&:nth-child(2n) {
+				td {
+					background: $c6;
+					
+					&:first-child {
+						background: none;
+					}
+					&:nth-child(2) {
+						border-top-left-radius: 4px;
+						border-bottom-left-radius: 4px;
+					}
+					&:last-child {
+						border-top-right-radius: 4px;
+						border-bottom-right-radius: 4px;
+					}
+				}
+			}
+		}
+	}
+	@media (max-width: 1200px) {
+		overflow-x: auto;
+		table {
+			width: 800px;
+
+		}
+	}
+	@media (max-width:500px) {
+		table {
+			width: 700px;
+
+		}
+	}
+}
