--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6233,3 +6233,62 @@ svg {
 .wrap .body .ct .sidebar-right .referral a {
   height: 100%;
 }
+
+.dt-table {
+  background-color: #f0f9fd;
+  padding: 12px 24px;
+  border-radius: 20px;
+}
+.dt-table table {
+  width: 100%;
+}
+.dt-table table tr th {
+  font-weight: bold;
+  color: #005aaa;
+  padding: 20px 12px;
+}
+.dt-table table tr td {
+  padding: 12px;
+}
+.dt-table table tr td a {
+  text-decoration: underline;
+  color: #005aaa;
+}
+.dt-table table tr td .dot {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 12px;
+  background: #ff0000;
+  margin-right: 4px;
+}
+.dt-table table tr td .dot.open {
+  background: #77c509;
+}
+.dt-table table tr:nth-child(2n) td {
+  background: #daf1f9;
+}
+.dt-table table tr:nth-child(2n) td:first-child {
+  background: none;
+}
+.dt-table table tr:nth-child(2n) td:nth-child(2) {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.dt-table table tr:nth-child(2n) td:last-child {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+@media (max-width: 1200px) {
+  .dt-table {
+    overflow-x: auto;
+  }
+  .dt-table table {
+    width: 800px;
+  }
+}
+@media (max-width: 500px) {
+  .dt-table table {
+    width: 700px;
+  }
+}
