--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -695,6 +695,14 @@ svg {
 		height: 100%;
 	}
 }
+.ct-20-10 {
+	.ct-title {
+		margin: 20px 0 !important;
+	}
+	.ctr {
+		margin-top: 32px !important;
+	}
+}
 
 .dt-table {
 	background-color: #f0f9fd;
