--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6245,9 +6245,10 @@ svg {
   background-color: #f0f9fd;
   padding: 12px 24px;
   border-radius: 20px;
+  overflow: auto;
 }
 .dt-table table {
-  width: 100%;
+  width: 800px;
 }
 .dt-table table tr th {
   font-weight: bold;
