--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -879,8 +879,13 @@ svg {
 		}
 	}
 }
-.wrap .sidebar-right .profile {
-	position: relative;
+.wrap .sidebar-right {
+	.profile {
+		position: relative;
+	}
+	.profile-form {
+		top: 0;
+	}
 }
 .wrap .head-mb {
 	position: relative;
@@ -907,14 +912,19 @@ svg {
 		left: 0;
 		width: 100%;
 		background-color: #fff;
-		padding: 24px 32px;
+		padding: 24px 0;
 		display: none;
 		border-radius:12px;
 		box-shadow: 11px 0 21px rgb(55 173 218 / 35%);
 		z-index: 99;
+		.profile {
+			padding: 0 24px 12px;
+			border-bottom: 1px solid #ddd;
+		}
 		.profile-child {
 			text-align: center;
 			margin-bottom: 24px;
+			padding: 0 32px;
 			&:last-child {
 				margin-bottom: 0;
 			}
