--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -945,7 +945,7 @@ svg {
 						cursor: pointer;
 						color: #005aaa;
 						background-color: #fff;
-						outline: 3px solid #fff;
+						border: 2px solid #fff;
 					}
 					input {
 						display: none;
