--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6471,7 +6471,7 @@ svg {
   cursor: pointer;
   color: #005aaa;
   background-color: #fff;
-  outline: 3px solid #fff;
+  border: 2px solid #fff;
 }
 .profile .profile-form .profile-child .form-avatar label input {
   display: none;
