--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6416,6 +6416,9 @@ svg {
   margin-right: 32px;
 }
 
+.profile:hover {
+  cursor: pointer;
+}
 .profile .profile-dropdown {
   position: absolute;
   top: 50%;
