--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1073,3 +1073,62 @@ svg {
 	border-radius: 4px;
 	z-index: 9999;
 }
+@media (max-width: 768.99px) {
+	
+}
+@media (max-width: 500px) {
+	#pdf_vntop {
+		width: 400px;
+		height: 292px;
+		font-size: 9px;
+	}
+	.pdf_vntop-bg {
+		height: 292px;
+	}
+	.pdf_vntop-content {
+		padding: 20px;
+		top: 0;
+		transform: unset;
+	}
+	.pdf_vntop-content-logo {
+		width: 80px;
+	}
+	.pdf_vntop-content-title {
+		color: #005aaa;
+		font-weight: bold;
+		text-transform: uppercase;
+		font-size: 14px;
+		padding-top: 8px;
+	}
+	.pdf_vntop-content-list {
+		width: 60%;
+		margin: 0 auto;
+		padding: 8px;
+	}
+	.pdf_vntop-content-item {
+		display: flex;
+		align-items: center;
+		padding: 2px 0;
+	}
+	.pdf_vntop-content-item p {
+		width: 50%;
+		text-align: left;
+	}
+	.pdf_vntop-content-text p {
+		margin-bottom: 0;
+	}
+	.pdf_vntop-content-signature {
+		text-align: right;
+		padding-right: 40px;
+		padding-top: 0;
+	}
+	.pdf_vntop-content-signature img {
+		width: 60px;
+	}
+	#downloadPdf {
+		position: fixed;
+		top: 12px;
+		right: 12px;
+		padding: 8px;	
+	}
+}
