--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1120,7 +1120,7 @@ svg {
 	.pdf_vntop-content-signature {
 		text-align: right;
 		padding-right: 40px;
-		padding-top: 0;
+		padding-top: 8px;
 	}
 	.pdf_vntop-content-signature img {
 		width: 60px;
