--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6679,7 +6679,7 @@ svg {
   .pdf_vntop-content-signature {
     text-align: right;
     padding-right: 40px;
-    padding-top: 0;
+    padding-top: 8px;
   }
 
   .pdf_vntop-content-signature img {
