--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6538,7 +6538,7 @@ svg {
   position: relative;
   font-family: Arial, Helvetica, sans-serif;
   color: #213444;
-  font-size: 16px;
+  font-size: 14px;
   margin: 0 auto;
 }
 
@@ -6553,9 +6553,9 @@ svg {
 
 .pdf_vntop-content {
   position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  top: 44%;
+  -webkit-transform: translateY(-44%);
+          transform: translateY(-44%);
   left: 0;
   width: 100%;
   z-index: 99;
@@ -6563,22 +6563,10 @@ svg {
   text-align: center;
 }
 
-.pdf_vntop-content-logo {
-  width: 160px;
-}
-
-.pdf_vntop-content-title {
-  color: #005aaa;
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 28px;
-  padding-top: 20px;
-}
-
 .pdf_vntop-content-list {
   width: 400px;
   margin: 0 auto;
-  padding: 20px 0;
+  padding: 0;
 }
 
 .pdf_vntop-content-item {
@@ -6596,20 +6584,6 @@ svg {
   text-align: left;
 }
 
-.pdf_vntop-content-text p {
-  margin-bottom: 8px;
-}
-
-.pdf_vntop-content-signature {
-  text-align: right;
-  padding-right: 120px;
-  padding-top: 16px;
-}
-
-.pdf_vntop-content-signature img {
-  width: 180px;
-}
-
 #downloadPdf {
   position: fixed;
   top: 12px;
@@ -6618,7 +6592,7 @@ svg {
   background: #fff;
   color: #37adda;
   border-radius: 4px;
-  z-index: 9999;
+  z-index: 999999;
 }
 
 @media (min-width: 510.99px) and (max-width: 768.99px) {
