--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6539,7 +6539,7 @@ svg {
   font-family: Arial, Helvetica, sans-serif;
   color: #213444;
   font-size: 14px;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 
 .pdf_vntop-bg {
