--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1008,7 +1008,7 @@ svg {
 	font-family: Arial, Helvetica, sans-serif;
 	color: #213444;
 	font-size: 14px;
-	margin: 0 auto;
+	margin: 20px auto;
 }
 .pdf_vntop-bg {
 	position: absolute;
