--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6559,7 +6559,6 @@ svg {
   left: 0;
   width: 100%;
   z-index: 99;
-  padding: 20px 100px;
   text-align: center;
 }
 
@@ -6595,74 +6594,29 @@ svg {
   z-index: 999999;
 }
 
-@media (min-width: 510.99px) and (max-width: 768.99px) {
+@media (max-width: 768.99px) {
   .pdf_vntop_scroll {
     overflow-x: scroll;
   }
-}
-@media (max-width: 500px) {
+
   #pdf_vntop {
-    width: 400px;
-    height: 292px;
-    font-size: 9px;
-  }
-
-  .pdf_vntop-bg {
-    height: 292px;
-  }
-
-  .pdf_vntop-content {
-    padding: 20px;
-    top: 0;
-    -webkit-transform: unset;
-            transform: unset;
-  }
-
-  .pdf_vntop-content-logo {
-    width: 80px;
-  }
-
-  .pdf_vntop-content-title {
-    color: #005aaa;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 14px;
-    padding-top: 8px;
-  }
-
-  .pdf_vntop-content-list {
-    width: 60%;
+    width: 600px;
+    height: 422px;
     margin: 0 auto;
-    padding: 8px;
+    font-size: 10px;
   }
 
   .pdf_vntop-content-item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     padding: 2px 0;
   }
 
-  .pdf_vntop-content-item p {
-    width: 50%;
-    text-align: left;
+  .pdf_vntop-content-list {
+    width: 200px;
   }
-
-  .pdf_vntop-content-text p {
-    margin-bottom: 0;
-  }
-
-  .pdf_vntop-content-signature {
-    text-align: right;
-    padding-right: 40px;
-    padding-top: 8px;
-  }
-
-  .pdf_vntop-content-signature img {
-    width: 60px;
+}
+@media (max-width: 500px) {
+  .pdf_vntop_scroll {
+    overflow-x: scroll;
   }
 
   #downloadPdf {
