--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6616,7 +6616,33 @@ svg {
 }
 @media (max-width: 500px) {
   .pdf_vntop_scroll {
-    overflow-x: scroll;
+    overflow-x: unset;
+  }
+
+  #pdf_vntop {
+    width: 400px;
+    height: 292px;
+    font-size: 8px;
+  }
+
+  .pdf_vntop-content {
+    top: 30%;
+    -webkit-transform: unset;
+            transform: unset;
+  }
+
+  .pdf_vntop-content-list {
+    padding: 8px;
+  }
+
+  .pdf_vntop-content-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 1px 0;
   }
 
   #downloadPdf {
