--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1052,6 +1052,7 @@ svg {
 	color: #37adda;
 	border-radius: 4px;
 	z-index: 999999;
+	box-shadow: 11px 0 21px rgb(55 173 218 / 35%);
 }
 @media (max-width: 768.99px) {
 	.pdf_vntop_scroll {
