--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1000,47 +1000,55 @@ svg {
 		overflow-y: unset;
 	}
 }
-
-#pdf_vntop {
-	width: 932px;
-	height: 660px;
+.pdf_vntop_scroll {
+	background: #F3FAFE;
 	position: relative;
-	font-family: Arial, Helvetica, sans-serif;
-	color: #213444;
-	font-size: 14px;
-	margin: 20px auto;
-}
-.pdf_vntop-bg {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 9;
-}
-.pdf_vntop-content {
-	position: absolute;
-	top: 44%;
-	transform: translateY(-44%);
-	left: 0;
-	width: 100%;
-	z-index: 99;
-	text-align: center;
-}
-
-.pdf_vntop-content-list {
-	width: 400px;
-	margin: 0 auto;
-	padding: 0;
-}
-.pdf_vntop-content-item {
-	display: flex;
-	align-items: center;
-	padding: 4px 0;
-}
-.pdf_vntop-content-item p {
-	width: 50%;
-	text-align: left;
+	#pdf_vntop {
+		width: 932px;
+		height: 660px;
+		position: relative;
+		font-family: Arial, Helvetica, sans-serif;
+		color: #213444;
+		font-size: 14px;
+		margin: 20px auto;
+		.pdf_vntop-content {
+			position: absolute;
+			top: 44%;
+			transform: translateY(-44%);
+			left: 0;
+			width: 100%;
+			z-index: 99;
+			text-align: center;
+			.pdf_vntop-content-list {
+				width: 400px;
+				margin: 0 auto;
+				padding: 0;
+				.pdf_vntop-content-item {
+					display: flex;
+					align-items: center;
+					padding: 4px 0;
+					color: #213444;
+					font-weight: 500;
+					p {
+						width: 50%;
+						text-align: left;
+					}
+				}
+			}
+		}
+	}
+	#box-img-out {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		text-align: center;
+		z-index: 99999;
+		#img-out {
+			margin: auto;
+		}
+	}
 }
 
 #downloadPdf {
@@ -1057,43 +1065,41 @@ svg {
 @media (max-width: 768.99px) {
 	.pdf_vntop_scroll {
 		overflow-x: scroll;
-	}
-	#pdf_vntop {
-		width: 600px;
-		height: 422px;
-		margin: 0 auto;
-		font-size: 10px;
-	}
-	.pdf_vntop-content-item {
-		padding: 2px 0;
-	}
-	.pdf_vntop-content-list {
-		width: 200px;
+		#pdf_vntop {
+			width: 600px;
+			height: 422px;
+			margin: 0 auto;
+			font-size: 10px;
+			.pdf_vntop-content {
+				.pdf_vntop-content-list {
+					width: 200px;
+					.pdf_vntop-content-item {
+						padding: 2px 0;
+					}
+				}
+			}
+		}
 	}
 }
 @media (max-width: 500px) {
 	.pdf_vntop_scroll {
 		overflow-x: unset;
-	}
-	#pdf_vntop {
-		width: 400px;
-		height: 292px;
-		font-size: 8px;
-	}
-	
-	.pdf_vntop-content {
-		top: 30%;
-		transform: unset;
-	}
-	
-	.pdf_vntop-content-list {
-		padding: 8px;
-	}
-	.pdf_vntop-content-item {
-		display: flex;
-		align-items: center;
-		padding: 1px 0;
-	}
+		#pdf_vntop {
+			width: 400px;
+			height: 292px;
+			font-size: 8px;
+			.pdf_vntop-content {
+				top: 30%;
+				transform: unset;
+				.pdf_vntop-content-list {
+					padding: 8px;
+					.pdf_vntop-content-item {
+						padding: 1px 0;
+					}
+				}
+			}
+		}
+	}	
 	#downloadPdf {
 		position: fixed;
 		top: 12px;
