--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6532,7 +6532,11 @@ svg {
   }
 }
 
-#pdf_vntop {
+.pdf_vntop_scroll {
+  background: #F3FAFE;
+  position: relative;
+}
+.pdf_vntop_scroll #pdf_vntop {
   width: 932px;
   height: 660px;
   position: relative;
@@ -6541,17 +6545,7 @@ svg {
   font-size: 14px;
   margin: 20px auto;
 }
-
-.pdf_vntop-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 9;
-}
-
-.pdf_vntop-content {
+.pdf_vntop_scroll #pdf_vntop .pdf_vntop-content {
   position: absolute;
   top: 44%;
   -webkit-transform: translateY(-44%);
@@ -6561,14 +6555,12 @@ svg {
   z-index: 99;
   text-align: center;
 }
-
-.pdf_vntop-content-list {
+.pdf_vntop_scroll #pdf_vntop .pdf_vntop-content .pdf_vntop-content-list {
   width: 400px;
   margin: 0 auto;
   padding: 0;
 }
-
-.pdf_vntop-content-item {
+.pdf_vntop_scroll #pdf_vntop .pdf_vntop-content .pdf_vntop-content-list .pdf_vntop-content-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -6576,11 +6568,24 @@ svg {
       -ms-flex-align: center;
           align-items: center;
   padding: 4px 0;
+  color: #213444;
+  font-weight: 500;
 }
-
-.pdf_vntop-content-item p {
+.pdf_vntop_scroll #pdf_vntop .pdf_vntop-content .pdf_vntop-content-list .pdf_vntop-content-item p {
   width: 50%;
   text-align: left;
+}
+.pdf_vntop_scroll #box-img-out {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  z-index: 99999;
+}
+.pdf_vntop_scroll #box-img-out #img-out {
+  margin: auto;
 }
 
 #downloadPdf {
@@ -6600,50 +6605,37 @@ svg {
   .pdf_vntop_scroll {
     overflow-x: scroll;
   }
-
-  #pdf_vntop {
+  .pdf_vntop_scroll #pdf_vntop {
     width: 600px;
     height: 422px;
     margin: 0 auto;
     font-size: 10px;
   }
-
-  .pdf_vntop-content-item {
-    padding: 2px 0;
-  }
-
-  .pdf_vntop-content-list {
+  .pdf_vntop_scroll #pdf_vntop .pdf_vntop-content .pdf_vntop-content-list {
     width: 200px;
+  }
+  .pdf_vntop_scroll #pdf_vntop .pdf_vntop-content .pdf_vntop-content-list .pdf_vntop-content-item {
+    padding: 2px 0;
   }
 }
 @media (max-width: 500px) {
   .pdf_vntop_scroll {
     overflow-x: unset;
   }
-
-  #pdf_vntop {
+  .pdf_vntop_scroll #pdf_vntop {
     width: 400px;
     height: 292px;
     font-size: 8px;
   }
-
-  .pdf_vntop-content {
+  .pdf_vntop_scroll #pdf_vntop .pdf_vntop-content {
     top: 30%;
     -webkit-transform: unset;
             transform: unset;
   }
-
-  .pdf_vntop-content-list {
+  .pdf_vntop_scroll #pdf_vntop .pdf_vntop-content .pdf_vntop-content-list {
     padding: 8px;
   }
-
-  .pdf_vntop-content-item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+  .pdf_vntop_scroll #pdf_vntop .pdf_vntop-content .pdf_vntop-content-list .pdf_vntop-content-item {
     padding: 1px 0;
   }
 
