--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1085,7 +1085,7 @@ svg {
 	.pdf_vntop_scroll {
 		overflow-x: unset;
 		#pdf_vntop {
-			width: 400px;
+			width: 100%;
 			height: 292px;
 			font-size: 8px;
 			.pdf_vntop-content {
