--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6622,7 +6622,7 @@ svg {
     overflow-x: unset;
   }
   .pdf_vntop_scroll #pdf_vntop {
-    width: 400px;
+    width: 100%;
     height: 292px;
     font-size: 8px;
   }
