--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1088,6 +1088,7 @@ svg {
 			width: 100%;
 			height: 292px;
 			font-size: 8px;
+			touch-action: pan-y;
 			.pdf_vntop-content {
 				top: 30%;
 				transform: unset;
