--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6625,6 +6625,8 @@ svg {
     width: 100%;
     height: 292px;
     font-size: 8px;
+    -ms-touch-action: pan-y;
+        touch-action: pan-y;
   }
   .pdf_vntop_scroll #pdf_vntop .pdf_vntop-content {
     top: 30%;
