--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1066,8 +1066,8 @@ svg {
 	.pdf_vntop_scroll {
 		overflow-x: scroll;
 		#pdf_vntop {
-			width: 600px;
-			height: 422px;
+			// width: 600px;
+			// height: 422px;
 			margin: 0px auto;
 			font-size: 10px;
 			.pdf_vntop-content {
@@ -1085,8 +1085,8 @@ svg {
 	.pdf_vntop_scroll {
 		overflow-x: unset;
 		#pdf_vntop {
-			width: 100%;
-			height: 292px;
+			// width: 100%;
+			// height: 292px;
 			font-size: 8px;
 			touch-action: pan-y;
 			.pdf_vntop-content {
