--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1011,6 +1011,7 @@ svg {
 		color: #213444;
 		font-size: 14px;
 		margin: 60px auto;
+		overflow: auto;
 		.pdf_vntop-content {
 			position: absolute;
 			top: 44%;
