--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1065,7 +1065,7 @@ svg {
 }
 @media (max-width: 768.99px) {
 	.pdf_vntop_scroll {
-		overflow-x: scroll;
+		// overflow-x: scroll;
 		#pdf_vntop {
 			// width: 600px;
 			// height: 422px;
