--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1011,7 +1011,6 @@ svg {
 		color: #213444;
 		font-size: 14px;
 		margin: 60px auto;
-		overflow: auto;
 		.pdf_vntop-content {
 			position: absolute;
 			top: 44%;
@@ -1065,10 +1064,10 @@ svg {
 }
 @media (max-width: 768.99px) {
 	.pdf_vntop_scroll {
-		// overflow-x: scroll;
+		overflow-x: scroll;
 		#pdf_vntop {
-			// width: 600px;
-			// height: 422px;
+			width: 600px;
+			height: 422px;
 			margin: 0px auto;
 			font-size: 10px;
 			.pdf_vntop-content {
@@ -1086,10 +1085,10 @@ svg {
 	.pdf_vntop_scroll {
 		overflow-x: unset;
 		#pdf_vntop {
-			// width: 100%;
-			// height: 292px;
+			width: 100%;
+			height: 292px;
 			font-size: 8px;
-			touch-action: pan-y;
+			touch-action: pinch-zoom;
 			.pdf_vntop-content {
 				top: 30%;
 				transform: unset;
