--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6543,7 +6543,6 @@ svg {
   color: #213444;
   font-size: 14px;
   margin: 60px auto;
-  overflow: auto;
 }
 .pdf_vntop_scroll #pdf_vntop .pdf_vntop-content {
   position: absolute;
@@ -6602,7 +6601,12 @@ svg {
 }
 
 @media (max-width: 768.99px) {
+  .pdf_vntop_scroll {
+    overflow-x: scroll;
+  }
   .pdf_vntop_scroll #pdf_vntop {
+    width: 600px;
+    height: 422px;
     margin: 0px auto;
     font-size: 10px;
   }
@@ -6618,9 +6622,11 @@ svg {
     overflow-x: unset;
   }
   .pdf_vntop_scroll #pdf_vntop {
+    width: 100%;
+    height: 292px;
     font-size: 8px;
-    -ms-touch-action: pan-y;
-        touch-action: pan-y;
+    -ms-touch-action: pinch-zoom;
+        touch-action: pinch-zoom;
   }
   .pdf_vntop_scroll #pdf_vntop .pdf_vntop-content {
     top: 30%;
