--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1062,45 +1062,45 @@ svg {
 	z-index: 999999;
 	box-shadow: 11px 0 21px rgb(55 173 218 / 35%);
 }
-@media (max-width: 768.99px) {
-	.pdf_vntop_scroll {
-		overflow-x: scroll;
-		#pdf_vntop {
-			width: 600px;
-			height: 422px;
-			margin: 0px auto;
-			font-size: 10px;
-			.pdf_vntop-content {
-				.pdf_vntop-content-list {
-					width: 200px;
-					.pdf_vntop-content-item {
-						padding: 2px 0;
-					}
-				}
-			}
-		}
-	}
-}
+// @media (max-width: 768.99px) {
+// 	.pdf_vntop_scroll {
+// 		overflow-x: scroll;
+// 		#pdf_vntop {
+// 			width: 600px;
+// 			height: 422px;
+// 			margin: 0px auto;
+// 			font-size: 10px;
+// 			.pdf_vntop-content {
+// 				.pdf_vntop-content-list {
+// 					width: 200px;
+// 					.pdf_vntop-content-item {
+// 						padding: 2px 0;
+// 					}
+// 				}
+// 			}
+// 		}
+// 	}
+// }
 @media (max-width: 500px) {
-	.pdf_vntop_scroll {
-		overflow-x: unset;
-		#pdf_vntop {
-			width: 100%;
-			height: 292px;
-			font-size: 8px;
-			touch-action: pinch-zoom;
-			.pdf_vntop-content {
-				top: 30%;
-				transform: unset;
-				.pdf_vntop-content-list {
-					padding: 8px;
-					.pdf_vntop-content-item {
-						padding: 1px 0;
-					}
-				}
-			}
-		}
-	}	
+// 	.pdf_vntop_scroll {
+// 		overflow-x: unset;
+// 		#pdf_vntop {
+// 			width: 100%;
+// 			height: 292px;
+// 			font-size: 8px;
+// 			touch-action: pinch-zoom;
+// 			.pdf_vntop-content {
+// 				top: 30%;
+// 				transform: unset;
+// 				.pdf_vntop-content-list {
+// 					padding: 8px;
+// 					.pdf_vntop-content-item {
+// 						padding: 1px 0;
+// 					}
+// 				}
+// 			}
+// 		}
+// 	}	
 	#downloadPdf {
 		position: fixed;
 		top: 12px;
