--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1081,7 +1081,7 @@ svg {
 // 		}
 // 	}
 // }
-@media (max-width: 500px) {
+// @media (max-width: 500px) {
 // 	.pdf_vntop_scroll {
 // 		overflow-x: unset;
 // 		#pdf_vntop {
@@ -1101,10 +1101,10 @@ svg {
 // 			}
 // 		}
 // 	}	
-	#downloadPdf {
-		position: fixed;
-		top: 12px;
-		right: 12px;
-		padding: 8px;	
-	}
-}
+// 	#downloadPdf {
+// 		position: fixed;
+// 		top: 12px;
+// 		right: 12px;
+// 		padding: 8px;	
+// 	}
+// }
