--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1004,7 +1004,7 @@ svg {
 .pdf_vntop_scroll {
 	position: relative;
 	#pdf_vntop {
-		width: 932px;
+		max-width: 932px;
 		height: 660px;
 		position: relative;
 		font-family: Arial, Helvetica, sans-serif;
