--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6546,13 +6546,15 @@ svg {
 }
 .pdf_vntop_scroll #pdf_vntop .pdf_vntop-content {
   position: absolute;
-  top: 44%;
+  top: 47%;
   -webkit-transform: translateY(-44%);
           transform: translateY(-44%);
   left: 0;
   width: 100%;
   z-index: 99;
   text-align: center;
+  font-weight: 500;
+  opacity: 0.9;
 }
 .pdf_vntop_scroll #pdf_vntop .pdf_vntop-content .pdf_vntop-content-list {
   width: 400px;
@@ -6568,11 +6570,13 @@ svg {
           align-items: center;
   padding: 4px 0;
   color: #213444;
-  font-weight: 500;
 }
 .pdf_vntop_scroll #pdf_vntop .pdf_vntop-content .pdf_vntop-content-list .pdf_vntop-content-item p {
   width: 50%;
   text-align: left;
+}
+.pdf_vntop_scroll #pdf_vntop .pdf_vntop-content .pdf_vntop-text {
+  padding-top: 16px;
 }
 .pdf_vntop_scroll #box-img-out {
   position: absolute;
