--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1004,25 +1004,33 @@ svg {
 .pdf_vntop_scroll {
 	position: relative;
 	#pdf_vntop {
-		max-width: 932px;
-		height: 660px;
+		width: 1160px;
+		height: 832px;
 		position: relative;
 		font-family: Arial, Helvetica, sans-serif;
 		color: #213444;
-		font-size: 14px;
+		font-size: 16px;
 		margin: 60px auto;
 		.pdf_vntop-content {
 			position: absolute;
-			top: 47%;
-			transform: translateY(-44%);
+			top: 42%;
+			transform: translateY(-42%);
 			left: 0;
 			width: 100%;
 			z-index: 99;
 			text-align: center;
 			font-weight:500;
 			// opacity: 0.9;
+			.pdf_vntop-content-title {
+				h1 {
+					font-size: 28px;
+					color: #005aaa;
+					font-weight: bold;
+					margin-bottom: 24px;
+				}
+			}
 			.pdf_vntop-content-list {
-				width: 320px;
+				width: 372px;
 				margin: 0 auto;
 				padding: 0;
 				.pdf_vntop-content-item {
@@ -1031,7 +1039,7 @@ svg {
 					padding: 4px 0;
 					color: #213444;
 					p {
-						width: 160px;
+						width: 180px;
 						padding-left: 12px;
 						text-align: left;
 					}
@@ -1039,6 +1047,16 @@ svg {
 			}
 			.pdf_vntop-text {
 				padding-top: 16px;
+			}
+		}
+		.pdf_vntop-content-temp {
+			position: absolute;
+			right: 300px;
+			bottom: 100px;
+			width: 230px;
+			img {
+				width: 100%;
+				height: auto;	
 			}
 		}
 	}
